--- a/02-buy-me-a-coffee-defi-dapp/buy-me-a-coffee-dapp/styles/Home.module.css
+++ b/02-buy-me-a-coffee-defi-dapp/buy-me-a-coffee-dapp/styles/Home.module.css
@@ -40,7 +40,7 @@
 }
 
 .title {
-  margin: 0;
+  margin: 0 0 30px 0;
   line-height: 1.15;
   font-size: 4rem;
 }
@@ -106,6 +106,12 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.gradient {
+  background-image: linear-gradient(60deg, #e21143, #ffb03a);
+  background-clip: text;
+  color: transparent;
 }
 
 @media (max-width: 600px) {
